Fixed the cropping of the Recipe Image on Cookbook listings, lessened the transition time for the recipe

--- a/src/CookbookManager.css
+++ b/src/CookbookManager.css
@@ -107,7 +107,8 @@
     border-radius: 10px;
     padding-bottom: 20px;
     max-width: 200px;
-    transition: .3s;
+    transition: .2s;
+    overflow: hidden;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.332);
     background-color: white;
 }
